# VeriMine

./: .gitignore  README.md  config.json  pyproject.toml
.claude/skills/analyze-rollout/: SKILL.md
.claude/skills/run-experiment/: SKILL.md
docker/: Dockerfile.hw-base  build.sh
hwrepo_pipeline/: __main__.py  commit_cluster.py  commit_miner.py  config.py  diff_classifier.py  github_client.py  miner_cli.py  models.py  pipeline.py  scanner.py
new_feature_craft/: __init__.py  __main__.py  actor_validator.py  config.py  craft_orchestrator.py  entrypoint.sh  models.py  module_miner.py  parallel_repo_processor.py  pyproject.toml  query_crafter.py  run_craft.sh  setup_env.sh  test_setup.py
new_feature_craft/agents/: claude_code_executor.py
new_feature_craft/config/prompts/: analyze_repo_tests.txt  generate_query.txt  generate_query_detailed.txt  generate_query_medium.txt  generate_query_simple.txt  generate_run_tests.txt  identify_core_modules.txt  quality_evaluation.txt  validate_query_alignment.txt
verilog_mining/: entrypoint.sh  filter_valid_tasks.py  parallel_pr_processor.py  pyproject.toml  real_test_validator.py  run_verilog.sh  verilog_diff_classifier.py  verilog_pr_discovery.py  verilog_rollout.py  verilog_task_generator.py  verilog_test_runner.py
verilog_mining/agents/: __init__.py  claude_code_executor.py
verilog_mining/components/: __init__.py  query_generator.py  test_organizer.py
verilog_mining/config/prompts/: classify_pr_files_verilog.txt  (+7 more)
verilog_mining/data/: repo_list.jsonl  repo_list_corev.jsonl
verilog_mining/scripts/: filter_repos.sh
