[project]
name = "new-feature-craft"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "moonstorage>=0.2.0",
    "moonpack>=0.2.2",
    "tqdm",
    "loguru",
    "claude-agent-sdk",
    "pytest",
    "aiohttp",
    "gitpython",
    "requests",
    "PyGithub",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["config*", "agents*"]
exclude = ["data*"]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[[tool.uv.index]]
name = "msh"
url = "https://pypi.msh.team/simple/"

[tool.uv.sources]
moonstorage = { index = "msh" }
moonpack = { index = "msh" }
